--- a/docker/cloudflared/docker-compose.yml
+++ b/docker/cloudflared/docker-compose.yml
@@ -6,11 +6,14 @@ networks:
 services:
   cloudflared:
     image: cloudflare/cloudflared:${CF_VERSION:-latest}
+    labels:
+      # Enable watchtower updates
+      - "com.centurylinklabs.watchtower.enable=true"
     container_name: cloudflare-tunnel
     command: tunnel --no-autoupdate run
     restart: unless-stopped
     environment:
-      - TUNNEL_TOKEN=${CF_TUNNEL_TOKEN}
+      TUNNEL_TOKEN: ${CF_TUNNEL_TOKEN}
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./hosts:/etc/hosts
