--- a/docker/watchtower/.env
+++ b/docker/watchtower/.env
@@ -8,4 +8,4 @@ WATCHTOWER_POLL_INTERVAL=86400
 WATCHTOWER_NOTIFICATIONS=shoutrrr
 WATCHTOWER_CHAT_ID=5150981207
 WATCHTOWER_BOT_TOKEN=6602312526:AAHSdoleo8FDdoydHaRefOzmNac6RSfULOw
-WATCHTOWER_NOTIFICATION_URL=telegram://${WATCHTOWER_CHAT_ID}@telegram/?channels=${WATCHTOWER_BOT_TOKEN}
+WATCHTOWER_NOTIFICATION_URL=telegram://${WATCHTOWER_BOT_TOKEN}@telegram/?channels=${WATCHTOWER_CHAT_ID}
